--- a/css/styles.css
+++ b/css/styles.css
@@ -426,4 +426,39 @@ body {
   -webkit-box-flex: 1;
       -ms-flex-positive: 1;
           flex-grow: 1;
+}
+
+.mycard {
+  width: 290px !important;
+  height: 350px;
+  margin-right: 10px !important;
+  background-color: #632727;
+  border-radius: 25px;
+  text-align: center;
+}
+
+.mycard-img {
+  display: block;
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  background-color: indigo;
+  margin: 0 auto;
+}
+
+.slick-next {
+  position: absolute !important;
+  top: -50px;
+  z-index: 999;
+}
+
+.slick-prev {
+  position: absolute !important;
+  top: -50px;
+  left: 850px;
+  z-index: 999;
+}
+
+.slick-dots {
+  display: none !important;
 }/*# sourceMappingURL=styles.css.map */
