--- a/scss/_fonts.scss
+++ b/scss/_fonts.scss
@@ -1,20 +1,6 @@
-/* Fonts */
-
-/* open-sans-regular - latin */
-@font-face {
-    font-family: "Open Sans", "Arial", sans-serif;
-    font-style: normal;
-    font-weight: 400;
-    src: local(""),
-        url("../fonts/open-sans-v34-latin-regular.woff2") format("woff2"),
-        /* Chrome 26+, Opera 23+, Firefox 39+ */
-        url("../fonts/open-sans-v34-latin-regular.woff") format("woff");
-    /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
-}
-
 /* poppins-300 - latin */
 @font-face {
-    font-family: "Poppins", "Arial", sans-serif;
+    font-family: "Poppins";
     font-style: normal;
     font-weight: 300;
     src: local(""),
@@ -26,7 +12,7 @@
 
 /* poppins-regular - latin */
 @font-face {
-    font-family: "Poppins", "Arial", sans-serif;
+    font-family: "Poppins";
     font-style: normal;
     font-weight: 400;
     src: local(""),
@@ -36,9 +22,21 @@
     /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
 }
 
+/* poppins-500 - latin */
+@font-face {
+    font-family: "Poppins";
+    font-style: normal;
+    font-weight: 500;
+    src: local(""),
+        url("../fonts/poppins-v20-latin-500.woff2") format("woff2"),
+        /* Chrome 26+, Opera 23+, Firefox 39+ */
+        url("../fonts/poppins-v20-latin-500.woff") format("woff");
+    /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+}
+
 /* poppins-600 - latin */
 @font-face {
-    font-family: "Poppins", "Arial", sans-serif;
+    font-family: "Poppins";
     font-style: normal;
     font-weight: 600;
     src: local(""),
@@ -50,12 +48,48 @@
 
 /* poppins-700 - latin */
 @font-face {
-    font-family: "Poppins", "Arial", sans-serif;
+    font-family: "Poppins";
     font-style: normal;
     font-weight: 700;
     src: local(""),
         url("../fonts/poppins-v20-latin-700.woff2") format("woff2"),
         /* Chrome 26+, Opera 23+, Firefox 39+ */
         url("../fonts/poppins-v20-latin-700.woff") format("woff");
+    /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+}
+
+/* rubik-regular - latin */
+@font-face {
+    font-family: "Rubik";
+    font-style: normal;
+    font-weight: 400;
+    src: local(""),
+        url("../fonts/rubik-v21-latin-regular.woff2") format("woff2"),
+        /* Chrome 26+, Opera 23+, Firefox 39+ */
+        url("../fonts/rubik-v21-latin-regular.woff") format("woff");
+    /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+}
+
+/* rubik-500 - latin */
+@font-face {
+    font-family: "Rubik";
+    font-style: normal;
+    font-weight: 500;
+    src: local(""),
+        url("../fonts/rubik-v21-latin-500.woff2") format("woff2"),
+        /* Chrome 26+, Opera 23+, Firefox 39+ */
+        url("../fonts/rubik-v21-latin-500.woff") format("woff");
+    /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+}
+
+/* rubik-700 - latin */
+@font-face {
+    font-family: "Rubik";
+    font-style: normal;
+    font-weight: 700;
+    src: local(""),
+        url("../fonts/rubik-v21-latin-700.woff2") format("woff2"),
+        /* Chrome 26+, Opera 23+, Firefox 39+ */
+        url("../fonts/rubik-v21-latin-700.woff") format("woff");
     /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
 }
