--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -3,4 +3,5 @@
 :root {
     --main-white-color: #fff;
     --main-black-color: #000;
+    --main-header-bg-color: linear-gradient(90.05deg, #E47500 -5.66%, #DF7C14 115.63%);;
 }
