--- a/scss/blocks/_header.scss
+++ b/scss/blocks/_header.scss
@@ -1,3 +1,107 @@
-.header {
+.header-bottom {
   background-image: var(--main-header-bg-color);
+  padding: 16px 0;
+}
+
+.nav {
+  display: flex;
+  align-items: center;
+}
+
+.nav-item:nth-child(1) {
+  display: flex;
+  align-items: center;
+  margin: 0;
+  padding: 0;
+  &::before {
+    content: "";
+    width: 11px;
+    height: 11px;
+    background-color: #fff;
+    display: inline-block;
+    border-radius: 50%;
+    margin-right: 7px;
+  }
+}
+
+.nav-item:nth-child(2) {
+  padding: 0;
+  margin: 0;
+  margin-left: 87.5px;
+}
+
+.nav-item:nth-child(3) {
+  padding: 0;
+  margin: 0;
+  margin-left: 74.85px;
+}
+
+.nav-item:nth-child(4) {
+  padding: 0;
+  margin: 0;
+  margin-left: 64.3px;
+}
+
+.nav-link {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
+  padding: 0;
+}
+
+.nav-btn {
+  color: var(--main-btn-color);
+  margin-left: 68px;
+  padding-top: 10.08px;
+  padding-bottom: 11.09px;
+  padding-left: 27.41px;
+  padding-right: 28.46px;
+  &:hover {
+    color: var(--main-btn-color);
+  }
+}
+
+.header-top {
+  padding: 9px 0;
+}
+
+.header-top-link {
+  text-decoration: none;
+  font-weight: 400;
+  font-size: 10px;
+  line-height: 15px;
+  color: #1A1A1A;  
+}
+
+.header-top-item:nth-child(1) {
+  display: flex;
+  align-items: center;
+  margin-right: 100px;
+  &::before {
+    content: "";
+    background-image: url("../images/location.svg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    width: 10px;
+    height: 15px;
+    display: inline-block;
+    margin-right: 12.5px;
+  }
+}
+
+.header-top-item:nth-child(2) {
+  display: flex;
+  align-items: center;
+  &::before {
+    content: "";
+    background-image: url("../images/phone.svg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    width: 15px;
+    height: 15px;
+    display: inline-block;
+    margin-right: 12.5px;
+  }
 }
