--- a/css/styles.css
+++ b/css/styles.css
@@ -576,4 +576,108 @@ body {
   height: 15px;
   display: inline-block;
   margin-right: 12.5px;
+}
+
+.hero {
+  background-image: url("../../images/hero-bg.svg"), url("../images/hero-background.svg");
+  background-position: calc(50% + 300px) 50%, 50% 50%;
+  background-repeat: no-repeat, no-repeat;
+  background-size: auto, cover;
+  padding-top: 128px;
+  padding-bottom: 158px;
+}
+
+.hero__wrapper {
+  width: 527px;
+  margin-left: 71px;
+}
+
+.hero-heading {
+  margin: 0;
+  padding: 0;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 155.2%;
+  color: #E87D0E;
+}
+
+.hero__title {
+  margin: 0;
+  padding: 0;
+  margin-top: 17px;
+  font-weight: 700;
+  font-size: 50px;
+  line-height: 155.2%;
+  color: #000000;
+}
+
+.hero__text {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 200%;
+  color: #000000;
+  margin: 0;
+  padding: 0;
+  margin-top: 26px;
+}
+
+.hero-btn {
+  margin-top: 50px;
+  background-image: -o-linear-gradient(357.52deg, #FA8305 2.08%, #FB9E3C 117.25%);
+  background-image: linear-gradient(92.48deg, #FA8305 2.08%, #FB9E3C 117.25%);
+  border-radius: 40px;
+  padding-top: 14px;
+  padding-bottom: 15px;
+  padding-left: 30px;
+  padding-right: 31px;
+}
+
+.develop {
+  margin-top: 83px;
+  background-image: url("../images/dots.svg");
+  background-repeat: no-repeat;
+  background-position-x: calc(50% + 347px);
+  background-position-y: calc(50% - 34px);
+}
+
+.develop__wrapper {
+  margin-left: 71px;
+}
+
+.develop-title {
+  width: 826px;
+  font-weight: 600;
+  font-size: 25px;
+  line-height: 187.5%;
+  text-align: center;
+  color: #222222;
+}
+
+.develop-top-box {
+  width: 525px;
+}
+
+.develop-top-title {
+  margin: 0;
+  padding: 0;
+  font-weight: 600;
+  font-size: 30px;
+  line-height: 187.5%;
+  color: #222222;
+  margin-bottom: 32px;
+  margin-top: 49px;
+}
+
+.develop-top-text {
+  margin: 0;
+  padding: 0;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 187.5%;
+  color: #525252;
+  margin-bottom: 46px;
+}
+
+.develop-box {
+  margin-bottom: 165px;
 }/*# sourceMappingURL=styles.css.map */
