--- a/scss/blocks/_header.scss
+++ b/scss/blocks/_header.scss
@@ -13,6 +13,7 @@
   align-items: center;
   margin: 0;
   padding: 0;
+
   &::before {
     content: "";
     width: 11px;
@@ -56,6 +57,7 @@
   padding-bottom: 11.09px;
   padding-left: 27.41px;
   padding-right: 28.46px;
+
   &:hover {
     color: var(--main-btn-color);
   }
@@ -70,13 +72,14 @@
   font-weight: 400;
   font-size: 10px;
   line-height: 15px;
-  color: #1A1A1A;  
+  color: #1A1A1A;
 }
 
 .header-top-item:nth-child(1) {
   display: flex;
   align-items: center;
   margin-right: 100px;
+
   &::before {
     content: "";
     background-image: url("../images/location.svg");
@@ -93,6 +96,7 @@
 .header-top-item:nth-child(2) {
   display: flex;
   align-items: center;
+
   &::before {
     content: "";
     background-image: url("../images/phone.svg");
@@ -104,4 +108,42 @@
     display: inline-block;
     margin-right: 12.5px;
   }
+}
+
+.header__btn {
+  display: none;
+}
+
+@media only screen and (max-width: 1024px) {
+
+  .header-top {
+    display: none;
+  }
+
+}
+
+@media only screen and (max-width: 768px) {
+
+  .container {
+    padding-left: 23px;
+    padding-right: 23px;
+  }
+
+  .nav {
+    display: none;
+  }
+
+  .header__btn {
+    display: block;
+    background-image: url("../images/burger.svg");
+    width: 26px;
+    height: 21px;
+    border: none;
+    background-color: transparent;
+  }
+  
+  .show-bg.header__btn {
+    background-image: url("../images/burger-close.svg");
+  }
+
 }
