--- a/css/styles.css
+++ b/css/styles.css
@@ -445,6 +445,7 @@ body {
   height: 100%;
   margin: 0;
   font-family: "Poppins", "Arial", sans-serif;
+  overflow-x: hidden;
 }
 
 /* STICKY-FOOTER */
@@ -578,8 +579,37 @@ body {
   margin-right: 12.5px;
 }
 
+.header__btn {
+  display: none;
+}
+
+@media only screen and (max-width: 1024px) {
+  .header-top {
+    display: none;
+  }
+}
+@media only screen and (max-width: 768px) {
+  .container {
+    padding-left: 23px;
+    padding-right: 23px;
+  }
+  .nav {
+    display: none;
+  }
+  .header__btn {
+    display: block;
+    background-image: url("../images/burger.svg");
+    width: 26px;
+    height: 21px;
+    border: none;
+    background-color: transparent;
+  }
+  .show-bg.header__btn {
+    background-image: url("../images/burger-close.svg");
+  }
+}
 .hero {
-  background-image: url("../../images/hero-bg.svg"), url("../images/hero-background.svg");
+  background-image: url("../images/hero-bg.svg"), url("../images/hero-background.svg");
   background-position: calc(50% + 300px) 50%, 50% 50%;
   background-repeat: no-repeat, no-repeat;
   background-size: auto, cover;
@@ -632,6 +662,42 @@ body {
   padding-right: 31px;
 }
 
+@media only screen and (max-width: 768px) {
+  .hero {
+    background-image: none, none;
+  }
+  .hero {
+    background-image: url("../images/hero-main-bg.svg");
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: bottom;
+    padding-bottom: 108px;
+  }
+  .hero__wrapper {
+    margin-left: 0;
+    width: 100%;
+  }
+  .hero-heading {
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 155.2%;
+    color: #E87D0E;
+  }
+  .hero__title {
+    width: 274px;
+    font-weight: 700;
+    font-size: 34px;
+    line-height: 155.2%;
+    color: #000000;
+  }
+  .hero__text {
+    width: 276px;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 200%;
+    color: #000000;
+  }
+}
 .develop {
   margin-top: 83px;
   background-image: url("../images/dots.svg");
@@ -680,4 +746,266 @@ body {
 
 .develop-box {
   margin-bottom: 165px;
+}
+
+.devices-box {
+  width: 826px;
+}
+
+.devices-title {
+  font-weight: 600;
+  font-size: 25px;
+  line-height: 187.5%;
+  text-align: center;
+  color: #222222;
+}
+
+.devices-text {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 187.5%;
+  text-align: center;
+  color: #525252;
+  margin-top: 24px;
+  margin-bottom: 100px;
+}
+
+.devices-item,
+.devices-items {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 187.5%;
+  text-align: center;
+  color: #000000;
+}
+
+.devices-item:nth-child(1)::before {
+  content: "";
+  background-image: url("../images/phone-logo.svg");
+  display: inline-block;
+  width: 65px;
+  height: 65px;
+  margin: 0 auto;
+  margin-bottom: 30px;
+}
+.devices-item:nth-child(1)::after {
+  content: "";
+  background-image: url("../images/brown-arrow.svg");
+  display: inline-block;
+  width: 21px;
+  height: 21px;
+  margin: 0 auto;
+  margin-top: 25.5px;
+}
+
+.devices-item:nth-child(2)::before {
+  content: "";
+  background-image: url("../images/pc.svg");
+  display: inline-block;
+  width: 65px;
+  height: 65px;
+  margin: 0 auto;
+  margin-bottom: 30px;
+}
+.devices-item:nth-child(2)::after {
+  content: "";
+  background-image: url("../images/brown-arrow.svg");
+  display: inline-block;
+  width: 21px;
+  height: 21px;
+  margin: 0 auto;
+  margin-top: 25.5px;
+}
+
+.devices-item:nth-child(3)::before {
+  content: "";
+  background-image: url("../images/play-station.svg");
+  display: inline-block;
+  width: 65px;
+  height: 65px;
+  margin: 0 auto;
+  margin-bottom: 30px;
+}
+.devices-item:nth-child(3)::after {
+  content: "";
+  background-image: url("../images/brown-arrow.svg");
+  display: inline-block;
+  width: 21px;
+  height: 21px;
+  margin: 0 auto;
+  margin-top: 25.5px;
+}
+
+.devices-item:nth-child(4)::before {
+  content: "";
+  background-image: url("../images/vr.svg");
+  display: inline-block;
+  width: 65px;
+  height: 65px;
+  margin: 0 auto;
+  margin-bottom: 30px;
+}
+.devices-item:nth-child(4)::after {
+  content: "";
+  background-image: url("../images/brown-arrow.svg");
+  display: inline-block;
+  width: 21px;
+  height: 21px;
+  margin: 0 auto;
+  margin-top: 25.5px;
+}
+
+.devices-items:nth-child(1)::before {
+  content: "";
+  background-image: url("../images/ar.svg");
+  display: inline-block;
+  width: 65px;
+  height: 65px;
+  margin: 0 auto;
+  margin-bottom: 30px;
+}
+.devices-items:nth-child(1)::after {
+  content: "";
+  background-image: url("../images/brown-arrow.svg");
+  display: inline-block;
+  width: 21px;
+  height: 21px;
+  margin: 0 auto;
+  margin-top: 25.5px;
+}
+
+.devices-items:nth-child(2)::before {
+  content: "";
+  background-image: url("../images/3dmodeling.svg");
+  display: inline-block;
+  width: 65px;
+  height: 65px;
+  margin: 0 auto;
+  margin-bottom: 30px;
+}
+.devices-items:nth-child(2)::after {
+  content: "";
+  background-image: url("../images/brown-arrow.svg");
+  display: inline-block;
+  width: 21px;
+  height: 21px;
+  margin: 0 auto;
+  margin-top: 25.5px;
+}
+
+.devices-items {
+  margin-bottom: 134px;
+}
+
+.slick-carusel {
+  background-color: #f5f5f5;
+  padding-top: 48px;
+  padding-bottom: 121px;
+}
+
+.carusel {
+  width: 378px !important;
+  height: 348px;
+  margin-right: 38px !important;
+  background-color: #fff;
+  border-radius: 25px;
+  padding-top: 35px;
+  padding-left: 35px;
+  padding-bottom: 39px;
+  padding-right: 39px;
+}
+
+.slick-next {
+  position: absolute !important;
+  top: -92px;
+  right: 205px;
+  z-index: 999;
+}
+.slick-next::before {
+  content: "";
+  background-image: url("../images/carusel-left-arrow.svg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  width: 79.04px;
+  height: 79.04px;
+  display: inline-block;
+}
+
+.slick-prev {
+  position: absolute !important;
+  top: -92px;
+  left: 1245px;
+  z-index: 999;
+}
+.slick-prev::before {
+  content: "";
+  background-image: url("../images/carusel-right-arrow.svg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  width: 79.04px;
+  height: 79.04px;
+  display: inline-block;
+}
+
+.slick-dots {
+  display: none !important;
+}
+
+.slick-c-box {
+  width: 525px;
+}
+
+.slick-carusel-title {
+  font-weight: 600;
+  font-size: 30px;
+  line-height: 187.5%;
+  color: #222222;
+  margin-bottom: 32px;
+}
+
+.slick-carusel-text {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 187.5%;
+  color: #525252;
+  margin: 0;
+  padding: 0;
+}
+
+.carusel-title-box {
+  background-color: #DBF5E8;
+  padding-top: 8px;
+  padding-left: 14px;
+  width: 140px;
+  height: 39px;
+  border-radius: 8px;
+}
+
+.carusel-box-title {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 187.5%;
+  color: #0CBE64;
+}
+
+.carusel-lorem {
+  font-weight: 600;
+  font-size: 20px;
+  line-height: 187.5%;
+  margin-top: 19px;
+  color: #000000;
+}
+
+.carusel-text {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 187.5%;
+  color: #525252;
+  margin-top: 16px;
+  margin-bottom: 28px;
+}
+
+.carusel-btn-box a {
+  color: #DC7000;
+  margin-right: 12px;
 }/*# sourceMappingURL=styles.css.map */
