--- a/scss/blocks/_slick.scss
+++ b/scss/blocks/_slick.scss
@@ -1,34 +1,115 @@
-.mycard {
-  width: 290px !important;
-  height: 350px;
-  margin-right: 10px !important;
-  background-color: #632727;
-  border-radius: 25px;
-  text-align: center;
+.slick-carusel {
+  background-color: #f5f5f5;
+  padding-top: 48px;
+  padding-bottom: 121px;
 }
 
-.mycard-img {
-  display: block;
-  width: 100px;
-  height: 100px;
-  border-radius: 50%;
-  background-color: indigo;
-  margin: 0 auto;
+.carusel {
+  width: 378px !important;
+  height: 348px;
+  margin-right: 38px !important;
+  background-color: #fff;
+  border-radius: 25px;
+  padding-top: 35px;
+  padding-left: 35px;
+  padding-bottom: 39px;
+  padding-right: 39px;
 }
 
 .slick-next {
   position: absolute !important;
-  top: -50px;
+  top: -92px;
+  right: 205px;
   z-index: 999;
+
+  &::before {
+    content: "";
+    background-image: url("../images/carusel-left-arrow.svg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    width: 79.04px;
+    height: 79.04px;
+    display: inline-block;
+  }
 }
 
 .slick-prev {
   position: absolute !important;
-  top: -50px;
-  left: 850px;
+  top: -92px;
+  left: 1245px;
   z-index: 999;
+
+  &::before {
+    content: "";
+    background-image: url("../images/carusel-right-arrow.svg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    width: 79.04px;
+    height: 79.04px;
+    display: inline-block;
+  }
+
 }
 
 .slick-dots {
   display: none !important;
+}
+
+.slick-c-box {
+  width: 525px;
+}
+
+.slick-carusel-title {
+  font-weight: 600;
+  font-size: 30px;
+  line-height: 187.5%;
+  color: #222222;
+  margin-bottom: 32px;
+}
+
+.slick-carusel-text {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 187.5%;
+  color: #525252;
+  margin: 0;
+  padding: 0;
+}
+
+.carusel-title-box {
+  background-color: #DBF5E8;
+  padding-top: 8px;
+  padding-left: 14px;
+  width: 140px;
+  height: 39px;
+  border-radius: 8px;
+}
+
+.carusel-box-title {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 187.5%;
+  color: #0CBE64;
+}
+
+.carusel-lorem {
+  font-weight: 600;
+  font-size: 20px;
+  line-height: 187.5%;
+  margin-top: 19px;
+  color: #000000;
+}
+
+.carusel-text {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 187.5%;
+  color: #525252;
+  margin-top: 16px;
+  margin-bottom: 28px;
+}
+
+.carusel-btn-box a {
+  color: #DC7000;
+  margin-right: 12px;
 }
