--- a/css/styles.css
+++ b/css/styles.css
@@ -771,6 +771,33 @@ body {
   padding-right: 31px;
 }
 
+@media only screen and (max-width: 1024px) {
+  .hero__wrapper {
+    margin: 0;
+    text-align: center;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .hero__title {
+    font-size: 43px;
+    width: 100%;
+  }
+  .hero__text {
+    line-height: 200%;
+    width: 100%;
+  }
+}
 @media only screen and (max-width: 768px) {
   .hero {
     background-image: none, none;
@@ -811,11 +838,6 @@ body {
     padding-bottom: 11px;
     padding-left: 22px;
     padding-right: 18px;
-  }
-}
-@media only screen and (max-width: 1024px) {
-  .hero__wrapper {
-    margin: 0;
   }
 }
 .develop {
