--- a/css/styles.css
+++ b/css/styles.css
@@ -774,20 +774,6 @@ body {
 @media only screen and (max-width: 1024px) {
   .hero__wrapper {
     margin: 0;
-    text-align: center;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
   }
   .hero__title {
     font-size: 43px;
@@ -842,10 +828,6 @@ body {
 }
 .develop {
   margin-top: 83px;
-  background-image: url("../images/dots.svg");
-  background-repeat: no-repeat;
-  background-position-x: calc(50% + 347px);
-  background-position-y: calc(50% - 34px);
 }
 
 .develop__wrapper {
@@ -890,6 +872,30 @@ body {
   margin-bottom: 165px;
 }
 
+.develop-box img {
+  border-radius: 5px;
+}
+
+@media only screen and (max-width: 768px) {
+  .develop__wrapper {
+    margin-left: 0;
+  }
+  .develop-title {
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 187.5%;
+    text-align: center;
+    width: 293px;
+    color: #222222;
+    margin-bottom: 42px;
+  }
+  .develop-top-box {
+    display: none;
+  }
+  .develop-box img {
+    margin-left: -23px;
+  }
+}
 .devices-box {
   width: 826px;
 }
