--- a/scss/blocks/_develop.scss
+++ b/scss/blocks/_develop.scss
@@ -48,9 +48,11 @@
   border-radius: 5px;
 }
 
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 1024px) {
 
-
+  .develop-title {
+    width: 100%;
+  }
 
 }
 
