--- a/css/styles.css
+++ b/css/styles.css
@@ -1494,4 +1494,106 @@ body {
     margin: 0;
     padding: 0;
   }
+}
+.lorem-inner {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-bottom: 125px;
+}
+
+.lorem-box {
+  margin-left: 67px;
+}
+
+.lorem-title {
+  font-weight: 500;
+  font-size: 30px;
+  line-height: 45px;
+  color: #000000;
+  margin-bottom: 43px;
+}
+
+.lorem-text {
+  font-weight: 400;
+  font-size: 17px;
+  line-height: 26px;
+  color: #515151;
+  margin-bottom: 18px;
+}
+
+.lorem-title-text {
+  font-weight: 400;
+  font-size: 17px;
+  line-height: 26px;
+  color: #515151;
+  margin-bottom: 46px;
+}
+
+.lorem-btn {
+  background-color: #DC7000;
+  padding: 13px 44px;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
+  color: #FFFFFF;
+  text-decoration: none;
+}
+
+@media only screen and (max-width: 1200px) {
+  .lorem-inner {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: column-reverse;
+            flex-direction: column-reverse;
+  }
+  .lorem-img-box img {
+    margin-top: 46px;
+  }
+}
+@media only screen and (max-width: 768px) {
+  .lorem-inner {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: column-reverse;
+            flex-direction: column-reverse;
+  }
+  .lorem-img-box img {
+    width: 306px;
+    height: 229px;
+    margin-top: 46px;
+  }
+  .lorem-title {
+    font-weight: 500;
+    font-size: 22px;
+    line-height: 33px;
+    color: #000000;
+  }
+  .lorem-text {
+    font-weight: 400;
+    font-size: 13px;
+    line-height: 20px;
+    color: #515151;
+  }
+  .lorem-title-text {
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 18px;
+    color: #515151;
+  }
+  .lorem-box {
+    margin-left: 0px;
+  }
 }/*# sourceMappingURL=styles.css.map */
