--- a/css/styles.css
+++ b/css/styles.css
@@ -1596,4 +1596,115 @@ body {
   .lorem-box {
     margin-left: 0px;
   }
+}
+.article-top h2 {
+  font-weight: 600;
+  font-size: 30px;
+  line-height: 187.5%;
+  color: #222222;
+}
+
+.article-top p {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 187.5%;
+  color: #525252;
+  margin-bottom: 74px;
+}
+
+.article-main {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding-left: 56px;
+  padding-top: 40px;
+  padding-bottom: 42px;
+  padding-right: 50px;
+  color: #fff;
+  background: #1B1B1B;
+  border-radius: 15px;
+}
+
+.article-left {
+  width: 516px;
+}
+
+.article-title {
+  font-weight: 500;
+  font-size: 30px;
+  line-height: 45px;
+  color: #FFFFFF;
+}
+
+.article-text {
+  font-weight: 400;
+  font-size: 17px;
+  line-height: 26px;
+  color: #FFFFFF;
+}
+
+.article-form {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  background-color: #fff;
+  max-width: 385.68px;
+  width: 100%;
+  height: 48px;
+  border-radius: 8px;
+}
+
+.article-btn {
+  border: none;
+  margin: 6px;
+  width: 105px;
+  height: 37px;
+  color: #fff;
+  background: #DC7000;
+  border-radius: 8px;
+}
+
+.article-input {
+  width: 100%;
+  border: none;
+  background-color: transparent;
+  padding-left: 10px;
+}
+
+.article-input:focus {
+  outline: none;
+}
+
+@media only screen and (max-width: 768px) {
+  .article-main {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    padding-top: 30px;
+    padding-left: 21px;
+    padding-right: 32px;
+  }
+  .article-left {
+    width: 100%;
+  }
+  .article-title {
+    font-weight: 500;
+    font-size: 30px;
+    line-height: 45px;
+  }
+  .article-text {
+    font-weight: 400;
+    font-size: 15px;
+    line-height: 22px;
+    width: 266px;
+    margin-top: 24px;
+    margin-bottom: 43px;
+  }
 }/*# sourceMappingURL=styles.css.map */
