--- a/css/styles.css
+++ b/css/styles.css
@@ -1707,4 +1707,39 @@ body {
     margin-top: 24px;
     margin-bottom: 43px;
   }
+}
+.site-footer__container {
+  width: 100%;
+  max-width: 1280px;
+  margin: 0 auto;
+  padding: 0 20px;
+}
+
+.footer__logo {
+  margin-bottom: 10px;
+}
+
+.site-footer__second {
+  margin-right: 60px;
+}
+
+.footer__item {
+  line-height: 29.81px;
+}
+
+.site-footer {
+  padding-top: 148px;
+}
+
+.site-footer__wrapper {
+  padding-top: 66px;
+  padding-bottom: 0px;
+}
+
+.footer__first {
+  max-width: 372px;
+}
+
+.footer__third {
+  max-width: 282px;
 }/*# sourceMappingURL=styles.css.map */
